# dennis

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  data.h  decl.h  defs.h  main.c  scan.c
include/: ast.h  data.h  definitions.h  scan.h
src/: #scan.c#  ast.c  ast_interpreter.c  data.c  parse_expression.c  scan.c  scc.c
test/: test01  test1  test2
